--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.parse.bolts:bolts-android:1.+'
     compile files('libs/Parse-1.8.2.jar')
+    compile 'com.squareup.picasso:picasso:2.5.0'
 }
