--- a/app/src/AndroidManifest.xml
+++ b/app/src/AndroidManifest.xml
@@ -43,9 +43,7 @@
 
             </activity>
         <activity android:name=".AddUser"></activity>
-        <activity
-            android:name=".ChatActivity"
-            android:label="@string/app_name"></activity>
+        <activity android:name=".ChatActivity"></activity>
 
         <service android:name="com.parse.PushService" />
         <receiver android:name="com.parse.ParseBroadcastReceiver">
