変更部分背景の設定が上手くいかない

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,5 +47,9 @@
             </activity>
         <activity android:name=".Setup"/>
 
+        <intent-filter> <action android:name="android.intent.action.VIEW"/>
+            <category android:name="android.intent.category.DEFAULT"/> 
+            <data android:mimeType="image/jpg"/>
+        </intent-filter>
     </application>
 </manifest>
